feat: Implement internationalization (i18n) with Dutch language support and update rubric data models to include multiple linked standards and a calculated grade setting.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,12 +6,60 @@
         "edit": "Edit",
         "add": "Add",
         "settings": "Settings",
-        "language": "Language"
+        "language": "Language",
+        "toggle_theme": "Toggle theme"
+    },
+    "sidebar": {
+        "main_section": "Main",
+        "quick_stats": "Quick Stats",
+        "rubrics_count": "Rubrics",
+        "students_count": "Students"
     },
     "settings": {
         "title": "Settings",
-        "language_selection": "Select Language",
-        "theme": "Theme"
+        "language_selection": "Language",
+        "theme": "Theme",
+        "general": "General",
+        "default_grade_scale": "Default Grade Scale",
+        "theme_dark": "Dark",
+        "theme_light": "Light",
+        "language_en": "English",
+        "language_nl": "Nederlands",
+        "language_help": "Choose your preferred language for the interface.",
+        "standards_integration": "Standards Integration",
+        "standards_help_1": "To link standards (CCSS, NGSS, etc.) from the <strong>Common Standards Project</strong>, you need a free API key.",
+        "standards_api_key": "CSP API Key",
+        "standards_api_placeholder": "Paste your API key here...",
+        "standards_setup_instructions": "Setup Instructions",
+        "standards_setup_1": "Register at",
+        "standards_setup_2": "Copy your API Key and paste it above.",
+        "standards_setup_3": "<strong>Important:</strong> Add this app's URL ({{origin}}) to the <strong>Allowed Origins</strong> list on their dashboard, or requests will be blocked by CORS.",
+        "comment_bank": "Comment Bank",
+        "comment_bank_help": "{{count}} saved comments. Manage your reusable feedback snippets.",
+        "action_manage_comments": "Manage Comments",
+        "grade_scales": "Grade Scales",
+        "scale_new_name": "New Scale",
+        "action_new_scale": "New Scale",
+        "action_edit": "Edit",
+        "action_collapse": "Collapse",
+        "label_label": "Label",
+        "label_min_pct": "Min %",
+        "label_max_pct": "Max %",
+        "label_color": "Color",
+        "action_add_range": "Add Range",
+        "export_templates": "Export Templates",
+        "export_templates_help": "Upload blank .docx rubrics — their column headers and colours will be used when exporting to Word.",
+        "action_upload_template": "Upload Template",
+        "empty_state_templates": "No templates uploaded yet. Click <strong>Upload Template</strong> to add one.",
+        "no_level_headers": "No level headers detected",
+        "action_set_default": "Set default",
+        "label_default": "Default",
+        "backup_restore": "Data Backup & Restore",
+        "action_export_backup": "Export Backup (JSON)",
+        "action_import_backup": "Import Backup",
+        "backup_help": "Export saves all rubrics, students, grades, and settings to a JSON file. Import restores everything.",
+        "alert_invalid_backup": "Invalid backup file.",
+        "alert_cannot_delete_default": "Can't delete the default scale."
     },
     "navigation": {
         "dashboard": "Dashboard",
@@ -21,5 +69,182 @@
         "comment_bank": "Comment Bank",
         "export": "Export",
         "attachments": "Attachments"
+    },
+    "dashboard": {
+        "title": "Dashboard",
+        "new_rubric": "New Rubric",
+        "rubrics": "Rubrics",
+        "students": "Students",
+        "grades_submitted": "Grades Submitted",
+        "recent_rubrics": "Recent Rubrics",
+        "view_all": "View all",
+        "no_rubrics": "No rubrics yet.",
+        "create_first": "Create first rubric",
+        "no_subject": "No subject",
+        "criteria": "criteria",
+        "graded": "graded",
+        "quick_actions": "Quick Actions",
+        "action_create_rubric": "Create New Rubric",
+        "action_add_student": "Add Student",
+        "action_upload_attachment": "Upload Attachment",
+        "action_export_pdf": "Export to PDF"
+    },
+    "rubricList": {
+        "title": "Rubrics",
+        "import_rubric": "Import Rubric",
+        "new_rubric": "New Rubric",
+        "search_rubrics": "Search rubrics…",
+        "no_rubrics": "No rubrics yet",
+        "create_first_instruction": "Create your first rubric to get started.",
+        "create_rubric": "Create Rubric",
+        "action_duplicate": "Duplicate",
+        "action_edit": "Edit",
+        "action_delete": "Delete",
+        "criteria_count": "criteria",
+        "levels_count": "levels",
+        "students_graded_count": "students graded",
+        "edit_rubric": "Edit Rubric",
+        "grade_students": "Grade Students",
+        "delete_rubric_title": "Delete Rubric",
+        "delete_rubric_warning": "This will permanently delete the rubric and all associated student scores. This cannot be undone."
+    },
+    "studentsPage": {
+        "title": "Students & Classes",
+        "import_csv": "Import CSV",
+        "export_csv": "Export CSV",
+        "add_student": "Add Student",
+        "classes": "Classes",
+        "action_rename": "Rename",
+        "action_merge": "Merge into...",
+        "action_delete": "Delete",
+        "new_class_placeholder": "New class…",
+        "default_class_name": "Class",
+        "students_count": "students",
+        "no_students": "No students in this class yet.",
+        "table_name": "Name",
+        "table_email": "Email",
+        "table_grades": "Grades",
+        "table_actions": "Actions",
+        "rubric_single": "rubric",
+        "rubric_plural": "rubrics",
+        "not_graded": "Not graded",
+        "grade_prefix": "Grade:",
+        "view_profile": "View Profile",
+        "edit_student_title": "Edit Student",
+        "add_student_title": "Add Student",
+        "form_full_name": "Full Name *",
+        "form_name_placeholder": "Student name",
+        "form_email": "Email (optional)",
+        "form_email_placeholder": "student@school.edu",
+        "form_class": "Class",
+        "action_save_changes": "Save Changes",
+        "rename_class_title": "Rename Class",
+        "form_new_name": "New Name",
+        "merge_class_title": "Merge Class",
+        "merge_class_description": "Select the target class to move all students into. The current class (<strong>{{className}}</strong>) will be deleted.",
+        "form_target_class": "Target Class",
+        "select_class_placeholder": "Select a class...",
+        "action_merge_classes": "Merge classes",
+        "delete_class_title": "Delete Class?",
+        "delete_class_confirmation": "Are you sure you want to delete <strong>{{className}}</strong>?",
+        "warning_label": "Warning:",
+        "delete_class_warning": "The {{count}} student(s) currently in this class will also be permanently deleted. If you want to keep them, merge this class into another one instead."
+    },
+    "gradeStudent": {
+        "title_prefix": "Grading:",
+        "action_back": "Back",
+        "action_attachments": "Attachments",
+        "action_save": "Save",
+        "action_saved": "Saved!",
+        "label_grade": "GRADE",
+        "label_percentage": "Percentage",
+        "label_weighted_score": "Weighted Score",
+        "label_total_points": "Total Points",
+        "label_modifier": "Better/Worse Modifier",
+        "offset_percentage": "% offset",
+        "offset_points": "Points offset",
+        "error_not_found": "Rubric/Student not found.",
+        "table_criterion": "Criterion",
+        "table_points": "pts",
+        "table_weight": "Wt%",
+        "label_standard": "Standard",
+        "label_override": "Override:",
+        "level_select": "Select",
+        "label_base_points": "Base Points",
+        "label_points": "Points",
+        "comment_placeholder": "Add a comment…",
+        "comment_open_bank": "Open Comment Bank",
+        "overall_comment_label": "Overall Comment",
+        "overall_comment_placeholder": "General feedback…",
+        "attachments_title": "Attachments"
+    },
+    "rubricBuilder": {
+        "action_back": "Back",
+        "action_save": "Save",
+        "action_saved": "Saved!",
+        "action_export": "Export",
+        "action_export_pdf": "Export PDF",
+        "action_export_docx": "Export DOCX",
+        "action_download_json": "Download JSON",
+        "action_delete_rubric": "Delete this rubric",
+        "action_toggle_settings": "Toggle Settings",
+        "action_preview": "Preview",
+        "action_form_view": "Form View",
+        "action_designer_view": "Designer View",
+        "placeholder_name": "Rubric Name...",
+        "placeholder_subject": "Subject / Grade...",
+        "placeholder_description": "Description (optional)...",
+        "label_scoring_mode": "Scoring Mode",
+        "mode_weighted": "Weighted Percentage",
+        "mode_total_points": "Total Points",
+        "label_total_max_points": "Total Max Points",
+        "label_criterion": "Criterion",
+        "label_weight": "Weight:",
+        "placeholder_criterion_name": "Criterion Name",
+        "placeholder_criterion_description": "Description (optional)",
+        "action_link_standard": "Link Standard",
+        "placeholder_level_name": "Level name",
+        "label_min_pts": "Min pts",
+        "label_max_pts": "Max pts",
+        "placeholder_level_description": "Describe this level…",
+        "label_sub_items": "Sub-items",
+        "placeholder_sub_item_label": "Sub-item label…",
+        "action_add_sub_item": "Add Sub-item",
+        "action_add_level": "Add Level",
+        "empty_state_criteria": "No criteria added yet.",
+        "action_add_first_criterion": "Add First Criterion",
+        "action_add_row": "Add Row",
+        "action_insert_from_bank": "Insert from bank...",
+        "action_add_column_level": "Add Column (Level)",
+        "format_title": "Formatting",
+        "format_criterion_width": "Criterion Col Width (px)",
+        "format_level_width": "Level Col Width (px)",
+        "format_font_size": "Font Size (px)",
+        "format_header_bg": "Header Background",
+        "format_header_text": "Header Text Color",
+        "format_accent_color": "Accent / Selected Color",
+        "format_font_family": "Font Family",
+        "format_level_order": "Level Order",
+        "format_order_best_first": "Best → Worst (left to right)",
+        "format_order_worst_first": "Worst → Best (left to right)",
+        "format_header_align": "Header Alignment",
+        "format_show_weights": "Show criterion weights",
+        "format_show_points": "Show point values",
+        "format_calculate_grade": "Calculate & show grade",
+        "format_show_borders": "Show borders / grid lines",
+        "format_alternate_rows": "Alternate row colors (striping)",
+        "format_reset_defaults": "Reset to Defaults",
+        "preview_title": "Rubric Preview",
+        "action_close": "Close",
+        "standards_modal_title": "Standards Integration",
+        "action_open_settings": "Open Settings",
+        "md_modal_title": "Markdown Formatting",
+        "action_got_it": "Got it",
+        "action_formatting_help": "Formatting Help",
+        "action_smart_allocate": "Smart Allocate Points",
+        "action_balance_weights": "Balance Weights",
+        "label_max": "max",
+        "label_weight_th": "Weight",
+        "placeholder_click_to_edit": "Click to edit..."
     }
 }
