feat: Updated rubric maker to be able to export all the rubrics with explicit sub-items listed as well. Updated the standards picker modal to have a bigger search bar. Improved the sub-item text box to show more text whilst editing. Added the option for a slider with the sub-items (similar to the main-item slider). Updated point calculations.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -209,6 +209,9 @@
         "placeholder_level_description": "Describe this level…",
         "label_sub_items": "Sub-items",
         "placeholder_sub_item_label": "Sub-item label…",
+        "label_sub_item_points": "Points",
+        "label_sub_item_min": "Min",
+        "label_sub_item_max": "Max",
         "action_add_sub_item": "Add Sub-item",
         "action_add_level": "Add Level",
         "empty_state_criteria": "No criteria added yet.",
