--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -209,6 +209,9 @@
         "placeholder_level_description": "Beschrijf dit niveau…",
         "label_sub_items": "Sub-items",
         "placeholder_sub_item_label": "Sub-item label…",
+        "label_sub_item_points": "Punten",
+        "label_sub_item_min": "Min",
+        "label_sub_item_max": "Max",
         "action_add_sub_item": "Sub-item Toevoegen",
         "action_add_level": "Niveau Toevoegen",
         "empty_state_criteria": "Nog geen criteria toegevoegd.",
