Re-updated the sub-item modal. Added learning goal / standard tracking.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -167,7 +167,7 @@
         "table_criterion": "Criterion",
         "table_points": "pts",
         "table_weight": "Wt%",
-        "label_standard": "Standard",
+        "label_standard": "Learning Goal / Standard",
         "label_override": "Override:",
         "level_select": "Select",
         "label_base_points": "Base Points",
@@ -202,7 +202,7 @@
         "label_weight": "Weight:",
         "placeholder_criterion_name": "Criterion Name",
         "placeholder_criterion_description": "Description (optional)",
-        "action_link_standard": "Link Standard",
+        "action_link_standard": "Link Learning Goal / Standard",
         "placeholder_level_name": "Level name",
         "label_min_pts": "Min pts",
         "label_max_pts": "Max pts",
@@ -239,7 +239,7 @@
         "format_reset_defaults": "Reset to Defaults",
         "preview_title": "Rubric Preview",
         "action_close": "Close",
-        "standards_modal_title": "Standards Integration",
+        "standards_modal_title": "Learning Goals / Standards Integration",
         "action_open_settings": "Open Settings",
         "md_modal_title": "Markdown Formatting",
         "action_got_it": "Got it",
