--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -167,7 +167,7 @@
         "table_criterion": "Criterium",
         "table_points": "pt.",
         "table_weight": "Gew%",
-        "label_standard": "Standaard",
+        "label_standard": "Leerdoel / Standaard",
         "label_override": "Overschrijft:",
         "level_select": "Selecteer",
         "label_base_points": "Basispunten",
@@ -202,7 +202,7 @@
         "label_weight": "Gewicht:",
         "placeholder_criterion_name": "Criteriumnaam",
         "placeholder_criterion_description": "Beschrijving (optioneel)",
-        "action_link_standard": "Standaard Koppelen",
+        "action_link_standard": "Leerdoel / Standaard Koppelen",
         "placeholder_level_name": "Niveaunaam",
         "label_min_pts": "Min pt.",
         "label_max_pts": "Max pt.",
@@ -239,7 +239,7 @@
         "format_reset_defaults": "Terugzetten naar Standaard",
         "preview_title": "Voorbeeld Rubriek",
         "action_close": "Sluiten",
-        "standards_modal_title": "Standaarden Integratie",
+        "standards_modal_title": "Leerdoelen / Standaarden Integratie",
         "action_open_settings": "Instellingen Openen",
         "md_modal_title": "Markdown Opmaak",
         "action_got_it": "Begrepen",
