Updated the export modal to also allow for toggling between landscape and portrait exports.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -237,6 +237,9 @@
         "format_show_borders": "Show borders / grid lines",
         "format_alternate_rows": "Alternate row colors (striping)",
         "format_reset_defaults": "Reset to Defaults",
+        "format_orientation": "Orientation",
+        "format_portrait": "Portrait",
+        "format_landscape": "Landscape",
         "preview_title": "Rubric Preview",
         "action_close": "Close",
         "standards_modal_title": "Learning Goals / Standards Integration",
