--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -237,6 +237,9 @@
         "format_show_borders": "Toon randen / rasterlijnen",
         "format_alternate_rows": "Wisselende rijkleuren (strepen)",
         "format_reset_defaults": "Terugzetten naar Standaard",
+        "format_orientation": "Oriëntatie",
+        "format_portrait": "Portret",
+        "format_landscape": "Landschap",
         "preview_title": "Voorbeeld Rubriek",
         "action_close": "Sluiten",
         "standards_modal_title": "Leerdoelen / Standaarden Integratie",
