UI/UX polish and performance improvements
- Fixed label wrapping and added badge to the “Comparative Matchup Limit” control in
  [src/pages/SettingsPage.tsx](cci:7://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/pages/SettingsPage.tsx:0:0-0:0) for better layout and readability.
- Refactored [src/pages/ExportPage.tsx](cci:7://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/pages/ExportPage.tsx:0:0-0:0):
  * Replaced static imports of heavy PDF/DOCX utilities with dynamic `await import(...)`
    to lazy‑load them only when needed.
  * Wrapped CSV export (`Papa.unparse`) in a dynamic import, removing the duplicate
    top‑level import.
  * Converted [handleCsvExport](cci:1://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/pages/ExportPage.tsx:93:4-148:5) to an async function.
- Updated [src/App.tsx](cci:7://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/App.tsx:0:0-0:0):
  * Replaced the plain “Loading…” spinner with an animated `lucide-react` `Loader`
    icon for a smoother perceived performance while `Suspense` falls back.
- Adjusted imports in [ExportPage.tsx](cci:7://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/pages/ExportPage.tsx:0:0-0:0) to restore missing React and Lucide imports
  that were unintentionally removed during earlier edits.
- Updated [src/pages/ExportPage.tsx](cci:7://file:///Users/wmeetsma/Documents/A10/Rubric%20Maker/src/pages/ExportPage.tsx:0:0-0:0) to use the new dynamic imports for PDF and DOCX
  exports, preserving existing functionality.
- Completed UI/UX audit checklist:
  * Marked layout fixes and button standardisation as completed in [task.md](cci:7://file:///Users/wmeetsma/.gemini/antigravity/brain/b72b54d6-4adb-4921-9c95-4e0dae560666/task.md:0:0-0:0).
  * Verified that all pages render cleanly and all i18n keys are present.
- Enhanced [walkthrough.md](cci:7://file:///Users/wmeetsma/.gemini/antigravity/brain/b72b54d6-4adb-4921-9c95-4e0dae560666/walkthrough.md:0:0-0:0):
  * Added a “UI Test 

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,7 +68,8 @@
         "statistics": "Statistics",
         "comment_bank": "Comment Bank",
         "export": "Export",
-        "attachments": "Attachments"
+        "attachments": "Attachments",
+        "localization": "Localization"
     },
     "dashboard": {
         "title": "Dashboard",
@@ -110,6 +111,7 @@
     },
     "studentsPage": {
         "title": "Students & Classes",
+        "search_students": "Search students...",
         "import_csv": "Import CSV",
         "export_csv": "Export CSV",
         "add_student": "Add Student",
